--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-<!-- nachalo -->
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Научиться учиться</title>
+</head>
+<body>
+  <div class="page">
+    <header class="header">
+      <div class="header__logo header__logo_place_header" alt="logo_header"></div>
+      <div class="header__title">Научится учиться</div>
+      <div class="header__subtitle">Как современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="link">Узнать -></a>  
+      </div>
+      <div class="header__main-illustration"><img class="main-illustration" src="./images/two_again.png" alt="two_again"></div>
+      <div class="header__square-pic"></div>
+    </header>
+    <main class="content">
+      <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief"><h3 class="h3-description link">Главные проблемы в обучении</h3></div>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">Ни в школе, ни в институте нас не научат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зарубежка быстро выветривается и не приносит пользы.</div>
+            <div class="two-columns__paragraph"><span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то мало где учат. Что с этим делать?</div>
+            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются применяются на примере обучения в Практикуме</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="digits">
+        <div class="digits__section-title">
+          <h1 class="h1 h1_digits">Цифры и факты</h1>
+        </div>
+        <div class="digits__section-subtitle">
+          <h3 class="h2 h2_digits">Про учёбу и мозг</h3>
+        </div>
+        <div class="digits__table">
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">86 миллиардов</h3>
+            <p class="cell__text h4_digits">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">2.1 миллиарда</h3>
+            <h4 class="cell__text h4_digits">Число нуждающихся в повышении квалификации</h4>
+            <h4 class="cell__description h4_digits">Всемирный Банк, 2017</h4>
+          </div>
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">1000 терабайт</h3>
+            <h4 class="cell__text h4_digits">Объём памяти человека</h4>
+          </div>
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">500 триллионов</h3>
+            <h4 class="cell__text h4_digits">Число ответственных за обучение нервных синапсов у взрослого человека</h4>
+          </div>
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">420 миллионов</h3>
+            <h4 class="cell__text h4_digits">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h4>
+            <h4 class="cell__description h4_digits">Всемирный Банк, 2017</h4>
+          </div>
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">17–20 лет</h3>
+            <h4 class="cell_text h4_digits">Пик обучаемости</h4>
+          </div>
+          <div class="table__cell">
+            <h3 class="cell__header h3_digits">1885 год</h3>
+            <h4 class="cell_text h4_digits">Открытие кривой забывания</h4>
+          </div>
+          <div class="table__cell">
+            <div class="cell__header"><h3 class="h3 h3_digits">1889 год</h3></div>
+            <div class="cell_text"><h4 class="h4 h4_digits">Открытие условного рефлекса</h4></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <div class="feynman__title"><h1 class="h1 h1_feynman">Методы Фейнмана</h1></div>
+        <div class="feynman__subtitile"><h2 class="h2 h2_feynman">Выучить и не забыть.</h2></div>
+        <div class="feynman__link"><h2 class="h2 h2_feynman link">Подробнее -></h2></div>
+        <div class="feynman__photo"><img class="feynman__photo" src="./images/feynman.png" alt="feynman"></div>
+      </section>
+
+      <section class="kaufman">
+        <div class="kaufman__title"><h1 class="h1 h1_kaufman">Принципы обучения</h1></div>
+        <div class="kaufman__subtitile"><h2 class="h2 h2_kaufman">от Джоша Кауфмана</h2></div>
+        <div class="kaufman__table">
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">1</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Выберите привлекательный проект.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">2</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Сосредоточьтесь на каком-то одном навыке.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">3</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Определите целевой уровень мастерства.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">4</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Разбейте навык на элементы.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">5</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Приготовьте всё необходимое для занятий.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">6</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Устраните препятствия для занятий.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">7</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Выделите специальное время для занятий.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">8</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Создайте быстрые петли обратной связи.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">9</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Занимайтесь по расписанию, короткими интенсивными интервалами.</h4></div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="cell__header"><h3 class="h3 h3_kaufman">10</h3></div>
+            <div class="cell__text"><h4 class="h4 h4_kaufman">Уделяйте внимание количеству и скорости.</h4></div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+
+    </footer>
+  </div>
+</body>
+</html>
