--- a/index.html
+++ b/index.html
@@ -31,46 +31,82 @@
       </section>
 
       <section class="digits">
-        <div class="digits__section-title">
-          <h1 class="h1 h1_digits">Цифры и факты</h1>
+        <div class="digits__title">
+          <h1 class="digits__title-text">Цифры и факты</h1>
         </div>
-        <div class="digits__section-subtitle">
-          <h3 class="h2 h2_digits">Про учёбу и мозг</h3>
+        <div class="digits__subtitle">
+          <h3 class="digits__subtitle-text">Про учёбу и мозг</h3>
         </div>
         <div class="digits__table">
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">86 миллиардов</h3>
-            <h4 class="cell__text h4_digits">Число нейронов в мозге человека</p>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">86 миллиардов</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Число нейронов в мозге человека</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">2.1 миллиарда</h3>
-            <h4 class="cell__text h4_digits">Число нуждающихся в повышении квалификации</h4>
-            <h4 class="cell__description h4_digits">Всемирный Банк, 2017</h4>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">2.1 миллиарда</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Число нуждающихся в повышении квалификации</p>
+            </div>
+            <div class="digits__description">
+              <p class="digits__description-content">Всемирный Банк, 2017</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">1000 терабайт</h3>
-            <h4 class="cell__text h4_digits">Объём памяти человека</h4>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">1000 терабайт</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Объём памяти человека</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">500 триллионов</h3>
-            <h4 class="cell__text h4_digits">Число ответственных за обучение нервных синапсов у взрослого человека</h4>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">500 триллионов</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">420 миллионов</h3>
-            <h4 class="cell__text h4_digits">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h4>
-            <h4 class="cell__description h4_digits">Всемирный Банк, 2017</h4>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">420 миллионов</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            </div>
+            <div class="digits__description">
+              <p class="digits__description-content">Всемирный Банк, 2017</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">17–20 лет</h3>
-            <h4 class="cell__text h4_digits">Пик обучаемости</h4>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">17–20 лет</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Пик обучаемости</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="cell__header h3_digits">1885 год</h3>
-            <h4 class="cell__text h4_digits">Открытие кривой забывания</h4>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">1885 год</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Открытие кривой забывания</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <div class="cell__header"><h3 class="h3 h3_digits">1889 год</h3></div>
-            <div class="cell__text"><h4 class="h4 h4_digits">Открытие условного рефлекса</h4></div>
+          <div class="digits__cell">
+            <div class="digits__header">
+              <h3 class="digits__header-text">1889 год</h3>
+            </div>
+            <div class="digits__text">
+              <p class="digits__text-content">Открытие условного рефлекса</p>
+            </div>
           </div>
         </div>
       </section>
@@ -79,10 +115,10 @@
         <div class="feynman__title"><h1 class="h1 h1_feynman">Методы Фейнмана</h1></div>
         <div class="feynman__subtitile"><h2 class="h2 h2_feynman">Выучить и не забыть.</h2></div>
         <div class="feynman__link"><a class="h2 h2_feynman link" href="#">Подробнее -></a></div>
-        <div class="feynman__photo"><img class="feynman__photo" src="./images/feynman.png" alt="feynman"></div>
+        <div class="feynman__photo"><img class="feynman__image" src="./images/feynman.png" alt="feynman"></div>
       </section>
 
-      <section class="kaufman">
+      <!-- <section class="kaufman">
         <div class="kaufman__title"><h1 class="h1 h1_kaufman">Принципы обучения</h1></div>
         <div class="kaufman__subtitile"><h2 class="h2 h2_kaufman">от Джоша Кауфмана</h2></div>
         <div class="kaufman__table">
@@ -128,9 +164,102 @@
           </div>
         </div>
         <div class="kaufman__triangle">
-          <img class="kaufman__triangle_image" src="./images/kaufman-triangle.svg" alt="kaufman-triangle">
+          <img class="kaufman__triangle-image" src="./images/kaufman-triangle.svg" alt="kaufman-triangle">
         </div>
-      </section>
+      </section> -->
+      <section class="kaufman">
+        <div class="kaufman__title">
+          <h1 class="kaufman__title-text">Принципы обучения</h1>
+        </div>
+        <div class="kaufman__subtitle">
+          <h2 class="kaufman__subtitle-text">от Джоша Кауфмана</h2>
+        </div>
+        <div class="kaufman__table">
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">1</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Выберите привлекательный проект.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">2</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">3</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Определите целевой уровень мастерства.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">4</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Разбейте навык на элементы.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">5</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Приготовьте всё необходимое для занятий.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">6</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Устраните препятствия для занятий.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">7</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Выделите специальное время для занятий.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">8</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Создайте быстрые петли обратной связи.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">9</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div>
+          </div>
+          <div class="kaufman__cell kaufman__cell_theme_dark">
+            <div class="kaufman__header">
+              <h3 class="kaufman__header-text">10</h3>
+            </div>
+            <div class="kaufman__text">
+              <p class="kaufman__text-content">Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </div>
+        </div>
+        <div class="kaufman__triangle">
+          <img class="kaufman__triangle-image" src="./images/kaufman-triangle.svg" alt="kaufman-triangle">
+        </div>
+      </section>      
     </main>
     <footer class="footer">
       <div class="footer__columns">
